// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtTabs should render default AtTabs 1`] = `
<view
  class="at-tabs at-tabs--horizontal at-tabs--WEB"
>
  <view
    class="at-tabs__header"
    id="tabs-AOTU2018"
  />
  <view
    class="at-tabs__body"
    style="transform: translate3d(-0%, 0px, 0px);"
  >
    <view
      class="at-tabs__underline"
      style="width: 0%;"
    />
    <!---->
  </view>
</view>
`;

exports[`AtTabs should render prop -- height 1`] = `
<view
  class="at-tabs__header"
  id="tabs-AOTU2018"
>
  <view
    class="at-tabs__item at-tabs__item--active"
    id="tabtabs-AOTU20180"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页1
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
  <view
    class="at-tabs__item"
    id="tabtabs-AOTU20181"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页2
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
  <view
    class="at-tabs__item"
    id="tabtabs-AOTU20182"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页3
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
</view>
`;

exports[`AtTabs should render prop -- scroll 1`] = `
<scroll-view
  class="at-tabs__header"
  id="tabs-AOTU2018"
  scrollintoview=""
  scrollwithanimation="true"
  scrollx="true"
  scrolly="false"
>
  <view
    class="at-tabs__item at-tabs__item--active"
    id="tabtabs-AOTU20180"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页1
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
  <view
    class="at-tabs__item"
    id="tabtabs-AOTU20181"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页2
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
  <view
    class="at-tabs__item"
    id="tabtabs-AOTU20182"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页3
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
</scroll-view>
`;

exports[`AtTabs should render prop -- tabDirection 1`] = `
<view
  class="at-tabs at-tabs--horizontal at-tabs--WEB"
>
  <view
    class="at-tabs__header"
    id="tabs-AOTU2018"
  >
    <view
      class="at-tabs__item at-tabs__item--active"
      id="tabtabs-AOTU20180"
    >
      <text
        style="white-space: nowrap;"
      >
        标签页1
      </text>
      <view
        class="at-tabs__item-underline"
      />
    </view>
    <view
      class="at-tabs__item"
      id="tabtabs-AOTU20181"
    >
      <text
        style="white-space: nowrap;"
      >
        标签页2
      </text>
      <view
        class="at-tabs__item-underline"
      />
    </view>
    <view
      class="at-tabs__item"
      id="tabtabs-AOTU20182"
    >
      <text
        style="white-space: nowrap;"
      >
        标签页3
      </text>
      <view
        class="at-tabs__item-underline"
      />
    </view>
  </view>
  <view
    class="at-tabs__body"
    style="transform: translate3d(-0%, 0px, 0px);"
  >
    <view
      class="at-tabs__underline"
      style="width: 300%;"
    />
    <!---->
  </view>
</view>
`;

exports[`AtTabs should render prop -- tabDirection 2`] = `
<view
  class="at-tabs at-tabs--scroll at-tabs--vertical at-tabs--WEB"
>
  <scroll-view
    class="at-tabs__header"
    id="tabs-AOTU2018"
    scrollintoview=""
    scrollwithanimation="true"
    scrollx="false"
    scrolly="true"
  >
    <view
      class="at-tabs__item at-tabs__item--active"
      id="tabtabs-AOTU20180"
    >
      <text
        style="white-space: nowrap;"
      >
        标签页1
      </text>
      <view
        class="at-tabs__item-underline"
      />
    </view>
    <view
      class="at-tabs__item"
      id="tabtabs-AOTU20181"
    >
      <text
        style="white-space: nowrap;"
      >
        标签页2
      </text>
      <view
        class="at-tabs__item-underline"
      />
    </view>
    <view
      class="at-tabs__item"
      id="tabtabs-AOTU20182"
    >
      <text
        style="white-space: nowrap;"
      >
        标签页3
      </text>
      <view
        class="at-tabs__item-underline"
      />
    </view>
  </scroll-view>
  <view
    class="at-tabs__body"
    style="transform: translate3d(0px, -0%, 0px);"
  >
    <view
      class="at-tabs__underline"
      style="width: 300%; height: 300%;"
    />
    <!---->
  </view>
</view>
`;

exports[`AtTabs should render prop -- tabList 1`] = `
<view
  class="at-tabs__header"
  id="tabs-AOTU2018"
>
  <view
    class="at-tabs__item at-tabs__item--active"
    id="tabtabs-AOTU20180"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页1
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
  <view
    class="at-tabs__item"
    id="tabtabs-AOTU20181"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页2
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
  <view
    class="at-tabs__item"
    id="tabtabs-AOTU20182"
  >
    <text
      style="white-space: nowrap;"
    >
      标签页3
    </text>
    <view
      class="at-tabs__item-underline"
    />
  </view>
</view>
`;
